Add styles for adminPage and adminModal

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -7,6 +7,8 @@
 @import 'footer';
 @import 'searchbar';
 @import 'searchcard';
+@import 'adminModal';
 @import 'adminDashboard';
 
 @import 'home';
+@import 'admin';
