Setup Modal in adminPage, add conditional content

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -13,5 +13,6 @@ $text-secondary-color: #8ad0f4;
 $login-red: rgba($heading-color, 0.5);
 $login-black: #171a27;
 $login-orange: #e53e2b;
-
 $login-page-texts: #444b59;
+
+$api-value: #70c081;
