--- a/src/styles/_searchbar.scss
+++ b/src/styles/_searchbar.scss
@@ -11,6 +11,9 @@
     .searchbar-text {
         text-align: center;
         color: $text-secondary-color;
+        margin: 1rem 0;
+        font-size: 1.5rem;
+        text-shadow: 2px 2px 5px $api-value;
     }
     .searchbar-util {
         width: 75%;
